--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,17 +9,17 @@ scrape_configs:
   - job_name: 'ec2_aws_node_exporter_discovery'
     ec2_sd_configs:
       - port: 9100 # referred to nodeExporter exposed port
-        role_arn: arn:aws:iam::971613862138:role/Ec2-Instance-Role
+
         filters:
-        - name: tag:aws:autoscaling:groupName
+        - name: aws:autoscaling:groupName
           values:
           - ecs-autoscaling-group
   - job_name: ecs_CAdvisor
     ec2_sd_configs:
       - port: 9200 # referred to cAdvisor exposed port
-        role_arn: arn:aws:iam::971613862138:role/Ec2-Instance-Role
+
         filters:
-        - name: tag:aws:autoscaling:groupName
+        - name: aws:autoscaling:groupName
           values:
           - ecs-autoscaling-group
 
